# simple-run

./: .dockerignore  .eslintrc.js  .gitignore  .tool-versions  README.md  bun.lockb  dev.dockerfile  docker-compose.yaml  eslint.config.js  mix.exs  package.json  pnpm-lock.yaml  renovate.json  simple-run.yaml  tsconfig.json  turbo.json
.github/workflows/: build-and-tests.yaml  credo.yml  rust-clippy.yml  sobelow.yml  tests.yaml
.husky/: commit-msg  pre-commit
apps/actions/: .gitignore  mix.exs  package.json
apps/actions/lib/: actions.ex
apps/actions/lib/actions/: application.ex  endpoint.ex  http_client.ex  response.ex  router.ex  telemetry.ex
apps/actions/test/support/: conn_case.ex  mocks.ex
apps/agent/: app.go  go.mod  go.sum  main.go  next.config.js  package.json  tailwind.config.ts  tsconfig.json  wails.json
apps/agent-ui/: next.config.js  package.json  package.json.md5  tsconfig.json
apps/agent-ui/src/app/: layout.tsx
apps/agent/frontend/: next.config.js  package-lock.json  package.json  package.json.md5  tailwind.config.ts
apps/agent/frontend/app/: layout.tsx  page.tsx
apps/agent/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/agent/src-tauri/src/: main.rs  simple_run.rs
apps/agent/src/app/: layout.tsx  local.css  page.tsx  titlebar.tsx
apps/agent/src/lib/: store.ts
apps/client/: .gitignore  mix.exs  package.json
apps/client/assets/: package-lock.json  package.json  tailwind.config.js
apps/client/assets/css/: app.css
apps/client/assets/js/: app.js
apps/client/lib/: client.ex
apps/client/lib/client/: application.ex  endpoint.ex  response.ex  router.ex  telemetry.ex
apps/client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/client/src-tauri/src/: main.rs
apps/client/test/support/: conn_case.ex
apps/client_core/: .gitignore  README.md  mix.exs  package.json
apps/client_core/lib/: client_core.ex
apps/client_core/lib/client_core/: application.ex
apps/client_core/test/: client_core_test.exs
apps/client_data/: .gitignore  mix.exs  package.json
apps/client_data/lib/: client_data.ex
apps/client_data/lib/client_data/: application.ex  apps.ex  config.ex  containers.ex  repo.ex  scripts.ex  state_machine.ex
apps/client_data/test/: test_helper.exs
apps/docs/: app.vue  next.config.js  package.json  postcss.config.js  tsconfig.json
apps/docs/app/: page.tsx
apps/web/: .eslintrc.cjs  .eslintrc.js  next.config.js  nuxt.config.ts  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json
apps/web/app/: page.tsx
apps/web/layouts/: default.vue
apps/web/pages/: index.vue
apps/web/src/: app.vue
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
scripts/: local-setup.sh  open-browser.sh
(+91 files in other folders)
