[package]
name = "simplerun"
version = "0.0.0"
description = "Run containerized applications easily on your local machine."
authors = ["Simple"]
license = "GPL-3.0"
repository = "https://github.com/simple-platform/simple-run"
default-run = "simplerun"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-start-dragging", "system-tray"] }
tauri-plugin-deep-link = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
