[package]
name = "simple_run"
version = "0.1.0"
default-run = "simple_run"
edition = "2018"
build = "src/build.rs"
description = ""

[build-dependencies]
tauri-build = "1.4.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1",features = ["api-all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
