[package]
name = "simplerun"
version = "0.0.0"
default-run = "simplerun"
edition = "2018"
build = "src/build.rs"
description = ""

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
base64 = "0.21.6"

tauri = { version = "1.5.4", features = [ "shell-open",
  "system-tray",
  "window-start-dragging",
  "shell-sidecar",
] }

tauri-plugin-deep-link = "0.1.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
